--- a/admin/trello.css
+++ b/admin/trello.css
@@ -327,14 +327,14 @@
     margin-left: 0vw;
     display: flex;
     justify-content: left;
-    overflow-x: scroll;
+    overflow-x: none;
     flex-wrap: wrap;
     background-image: url('img/trelloback.png');
     background-repeat: no-repeat;
     background-size: cover;
     padding: 2vw;
     padding-bottom: 70vh;
-    border-radius:0vw 0vw 2vw 2vw;
+    border-radius: 0vw 0vw 1vw 1vw;
 }
 
 button.addnewline {
@@ -356,7 +356,7 @@ button.addnewline {
     padding: 1vh;
     font-size: 0.7vw;
     filter: blur(2);
-    border-radius: 2vw 2vw 0vw 0vw;
+    border-radius: 1vw 1vw 0vw 0vw;
 }
 
 .left-side {
@@ -405,8 +405,8 @@ button.addnewline:hover {
 
 .block-sections {
     background-color: #F1F2F4;
-    padding: 1vw;
-    width: 17vw;
+    padding: 0.5vw;
+    width: 14vw;
     margin-right: 1vw;
     border-radius: 1vw;
     margin-bottom: 1vh;
@@ -419,6 +419,9 @@ button.addnewline:hover {
     text-transform: uppercase;
     font-weight: 500;
     padding-bottom: 2vh;
+    padding-left: 0.3vw;
+    padding-top: 1vh;
+    cursor: pointer;
 }
 
 .linetype{
@@ -495,7 +498,7 @@ button.addnewline:hover {
     margin-bottom: 1vh;
 }
 
-tbody td {
+tbody td, .addnewitemshow input {
     width: 100%;
     padding: 0.5vw;
     padding-top: 0vw;
@@ -508,6 +511,54 @@ tbody td {
     font-size: 0.75vw;
     color: rgb(88, 88, 88);
     align-items: center;
+    background-color: white;
+    
+}
+
+tbody tr {
+    cursor: pointer;
+}
+
+.buttonsflexbox {
+    display: flex;
+    align-items: center;
+    
+}
+
+.addlinetoplocalstorage {
+    background: #0055CC;
+    color: white;
+    border: none;
+    padding: 0.4vw 0.6vw 0.4vw 0.6vw;
+    border-radius: 0.3vw;
+    cursor: pointer;
+    margin-right: 1vw;
+    font-size: 0.7vw;
+}
+
+.closelineadd {
+    font-size: 1.2vw;
+    background-color: transparent;
+    border: none;
+    color: #696969;
+    cursor: pointer;
+}
+
+.closelineadd:hover {
+    color: #575757;
+}
+
+.addlinetoplocalstorage:hover {
+    background: #01429c;
+}
+
+.addnewitemshow input {
+    margin-top: 0.5vh;
+    padding: 0.8vw 0.5vw 2vw 0.5vw;
+}
+
+.addnewitemshow {
+    display: none;
 }
 
 tbody tr {
@@ -1267,6 +1318,8 @@ a.optionselectedsettings {
     color: #D83121;
   }
 
+
+
 @media screen and (max-width: 980px) { 
     button.addnewline {
         width: 100%;
@@ -1291,7 +1344,7 @@ a.optionselectedsettings {
     .block-sections {
         background-color: #F1F2F4;
         padding: 1vw;
-        width: 50vw;
+        width: 65vw;
         margin-right: 2vw;
         border-radius: 2vw;
         height: 100%;
@@ -1299,12 +1352,12 @@ a.optionselectedsettings {
     }
     
     .block-sections h1 {
-        font-size: 2.8vw;
+        font-size: 3.4vw;
         text-transform: uppercase;
-        font-weight: 600;
+        font-weight: 500;
         padding-bottom: 1vh;
         margin-left: 1vh;
-        margin-top: 1vh;
+        margin-top: 0.3vh;
     }
     
     .linetype{
@@ -1386,7 +1439,7 @@ a.optionselectedsettings {
         margin-bottom: 1vh;
     }
     
-    tbody td {
+    tbody td, .addnewitemshow input {
         width: 100%;
         padding: 2vw;
         padding-top: 1vw;
@@ -1400,6 +1453,51 @@ a.optionselectedsettings {
         color: rgb(46, 46, 46);
         align-items: none;
         
+    }
+
+    .buttonsflexbox {
+        display: flex;
+        align-items: center;
+        
+    }
+    
+    .addlinetoplocalstorage {
+        background: #0055CC;
+        color: white;
+        border: none;
+        padding: 1.8vw 5vw 1.8vw 5vw;
+        border-radius: 0.3vw;
+        cursor: pointer;
+        margin-right: 3vw;
+        font-size: 3.5vw;
+    }
+    
+    .closelineadd {
+        font-size: 6vw;
+        background-color: transparent;
+        border: none;
+        color: #696969;
+        cursor: pointer;
+        font-weight: 400;
+    }
+    
+    .closelineadd:hover {
+        color: #575757;
+    }
+    
+    .addlinetoplocalstorage:hover {
+        background: #01429c;
+    }
+    
+    .addnewitemshow input {
+        margin-top: 0.5vh;
+        font-size: 3vw;
+        padding: 2vw 3vw 10vw 3vw;
+    }
+    
+    .addnewitemshow {
+        display: none;
+        margin-top: 0.5vh;
     }
     
     tbody tr{
