--- a/admin/style.css
+++ b/admin/style.css
@@ -989,6 +989,39 @@ tr th{
     text-decoration: none;
 }
 
+.downloadbutton {
+    background-color: #f18ebe;
+    color: white;
+    padding: 1vw 4vw 1vw 4vw;
+    border-radius: 1vw;
+    border: none;
+    cursor: pointer;
+    margin: 2vw;
+}
+
+.inputbutton {
+    background-color: transparent;
+    color: rgb(0, 0, 0);
+    padding: 1vw 4vw 1vw 4vw;
+    border-radius: 1vw;
+    cursor: pointer;
+    border: none;
+    text-align: center;
+}
+
+input.inputbutton::-webkit-file-upload-button {
+    background-color: transparent;
+    color: rgb(255, 101, 222);
+    border: 0.1vw solid rgb(255, 101, 222);
+    cursor: pointer;
+
+
+}
+
+input.inputbutton::-webkit- {
+    display: none;
+}
+
 .vermaisplanilha h1{
     text-align: center;
     margin: auto;
@@ -1047,6 +1080,7 @@ tr th{
     width: 7vw;
     margin-right: 3vw;
 }
+
 
 .blockfornecedores-add h1 {
     border: 0.1vw dashed var(--rosaprimario);
@@ -1126,6 +1160,95 @@ label#embreve {
     color: var(--rosaprimario);
 }
 
+.pedidopendente {
+    margin: 0vw;
+    padding: 1vw;
+    background-color: rgb(238, 236, 236);
+    border-radius: 1vw;
+    width: 39vw;
+    margin-bottom: 1vh;
+    
+}
+
+.pedidopendente h1 {
+    font-size: 1.2vw;
+    margin-bottom: 1vh;
+}
+
+.headerpedidoobs {
+    
+    align-items: center;
+    display: flex;
+}
+
+.divPedidosPendentes {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 2vw;
+}
+
+
+.headerclient h1 {
+    color: #0c0c0c;
+}
+
+.headerclient {
+    display: flex;
+
+}
+
+.pedidopendente p {
+    margin-left: 2vw;
+    margin-top: 0.5vh;
+    font-size: 0.8vw;
+}
+
+.checkbox select {
+    margin-left: 1vw;
+    background-color: white;
+    outline: none;
+    color: black;
+}
+
+.bodyorder p{
+    width: 25vw;
+    overflow-x: auto;
+}
+
+.primaryside {
+    display: block;
+    width: 10vw;
+    overflow-x: auto;
+}
+
+.checkbox h2 {
+    background-color: rgb(255, 123, 0);
+    width: 7vw;
+    text-align: center;
+    color: white;
+    border-radius: 10vw;
+    font-size: 0.9vw;
+}
+
+.headerinside {
+    display: flex;
+    align-items: center;
+    margin-left: 0.3vw;
+}
+
+.headerpedidoobs i {
+    color: rgb(0, 0, 0);
+    align-items: center;
+    font-size: 1.2vw;
+    padding: 0.2vw;
+    border-radius: 0.2vw;
+}
+
+.divPedidosPendentes {
+    justify-content: space-between;
+    display: flex;
+}
+
 .contashow img {
     margin-right: 0.5vw;
     width: 3vw;
@@ -1186,6 +1309,105 @@ a.optionselectedsettings {
 
 
 @media screen and (max-width: 980px) {
+    .pedidopendente {
+        margin: 0vw;
+        padding: 1vw;
+        background-color: rgb(238, 236, 236);
+        border-radius: 1vw;
+        width: 97vw;
+        margin-bottom: 1vh;
+    }
+    
+    .pedidopendente h1 {
+        font-size: 4vw;
+        margin-bottom: 1vh;
+    }
+    
+    .headerpedidoobs {
+        
+        align-items: center;
+        display: flex;
+    }
+    
+    .divPedidosPendentes {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 2vw;
+    }
+    
+    
+    .headerclient h1 {
+        color: #0c0c0c;
+    }
+    
+    .pedidopendente p {
+        margin-left: 10vw;
+        margin-top: 0.5vh;
+        font-size: 3vw;
+    }
+    
+    .checkbox select {
+        margin-left: 1vw;
+        background-color: white;
+        outline: none;
+        color: black;
+    }
+    
+    .checkbox h2 {
+        background-color: rgb(255, 123, 0);
+        width: 25vw;
+        text-align: center;
+        color: white;
+        border-radius: 10vw;
+        font-size: 3vw;
+    }
+    
+    .headerinside {
+        display: flex;
+        align-items: center;
+        margin-left: 0.3vw;
+    }
+    
+    .headerpedidoobs i {
+        color: rgb(0, 0, 0);
+        align-items: center;
+        font-size: 4vw;
+        padding: 3vw;
+        border-radius: 5vw;
+    }
+    
+    .divPedidosPendentes {
+        justify-content: space-between;
+        display: flex;
+    }
+    
+    .downloadbutton {
+        background-color: #f360a7;
+        color: white;
+        padding: 2vw 8vw 2vw 8vw;
+        border-radius: 1vw;
+        border: none;
+        margin: 4vw;
+    }
+    
+    .inputbutton {
+        background-color: transparent;
+        color: rgb(0, 0, 0);
+        padding: 2vw 8vw 2vw 8vw;
+        border-radius: 1vw;
+        border: none;
+        margin: 4vw;
+    }
+
+    input.inputbutton::-webkit-file-upload-button {
+        background-color: transparent;
+        color: rgb(255, 101, 222);
+        border: 0.1vw solid rgb(255, 101, 222);
+        cursor: pointer;
+        background-color: white;
+    
+    }
+
     .divTable i {
         font-size: 4vw;
       }
@@ -1982,6 +2204,17 @@ a.optionselectedsettings {
             width: 100%;
             margin-left: 0vh;
             margin-right: 0vh;
+        }
+
+        .bodyorder p{
+            width: 49.1vw;
+            overflow-x: auto;
+        }
+        
+        .primaryside {
+            display: block;
+            width: 30vw;
+            overflow-x: auto;
         }
         
         .toptitlecard {
